adding api token for send message
